Get macOS packaging with jpackage