@@ -117,161 +117,6 @@ object JavaPackager {
     }
   }
 
-  def repackageJar(app: SubApplication, mainClass: Option[String], sourceJar: File, outDir: File): File =
-    repackageJar(s"${app.jarName}.jar", mainClass, sourceJar, outDir)
-
-  def repackageJar(jarName: String, mainClass: Option[String], sourceJar: File, outDir: File): File = {
-    IO.createDirectory(outDir)
-    val newJarLocation = outDir / jarName
-    packageJar(sourceJar, newJarLocation, mainClass)
-    newJarLocation
-  }
-
-  def packageJar(jarFile: File, targetFile: File, mainClass: Option[String]): Unit = {
-    import java.util.jar.Manifest
-
-    val tmpDir = IO.createTemporaryDirectory
-    IO.unzip(jarFile, tmpDir)
-    val oldManifest = Using.fileInputStream(tmpDir / "META-INF" / "MANIFEST.MF") { is =>
-      new Manifest(is)
-    }
-    IO.delete(tmpDir / "META-INF")
-    val manifest = new Manifest()
-    JavaPackager.jarAttributes.attributes.foreach {
-      case (k, v) => manifest.getMainAttributes.put(k, v)
-    }
-    manifest.getMainAttributes.put(MAIN_CLASS,
-      mainClass.getOrElse(oldManifest.getMainAttributes.getValue(MAIN_CLASS)))
-    manifest.getMainAttributes.put(CLASS_PATH, oldManifest.getMainAttributes.getValue(CLASS_PATH))
-    IO.jar(Path.allSubpaths(tmpDir), targetFile, manifest)
-    IO.delete(tmpDir)
-  }
-
-// jpackage, which replaces javapackager for Java 17, packages all files and
-// directories in the jarDir. Formerly it was the same as the inputDir
-// used in NetLogoPackaging.scala.
-  def generateStubApplication(
-    packagerJDK: BuildJDK,
-    title: String,
-    nativeFormat: String,
-    jarDir: File,
-    outDir: File,
-    buildDirectory: File,
-    mainJar: File) = {
-    FileActions.copyFile(mainJar, buildDirectory / mainJar.getName)
-
-    val additionalArgs : Option[Seq[String]] =
-    if (System.getProperty("os.name").contains("Mac")) {
-      Some(Seq[String]("--java-options", "--add-exports java.desktop/com.apple.laf=ALL-UNNAMED"))
-    } else {
-      None
-    }
-    val args = Seq[String](packagerJDK.javapackager,
-      "--verbose",
-      "--name",         title,
-      "--main-class",   "org.nlogo.app.App",
-      "--type",         "app-image",
-      "--input",        jarDir.getAbsolutePath,
-      "--dest",         outDir.getAbsolutePath,
-      "--main-jar",     mainJar.getName) ++
-      additionalArgs.toList.flatten
-
-    val envArgs = packagerJDK.javaHome.map(h => Seq("JAVA_HOME" -> h)).getOrElse(Seq())
-
-    println("running: " + args.mkString(" "))
-    val ret = Process(args, buildDirectory, envArgs: _*).!
-    if (ret != 0) {
-      sys.error("packaging failed!")
-    }
-    outDir.listFiles.head
-  }
-
-  /* This function copies the stub application to <specified-directory> / newName.app.
-   * It renames the app and the name, the product stub, and the configuration file to the
-   * appropriate locations, but doesn't alter their contents.
-   * Does not alter the classpath or Info.plist, but deletes the JRE from the copied directory */
-  def copyMacStubApplication(
-    stubBuildDirectory:          File,
-    stubApplicationName:         String,
-    newApplicationDirectory:     File,
-    newApplicationDirectoryName: String,
-    newApplicationName:          String): Unit = {
-
-      val macRoot = stubBuildDirectory / (stubApplicationName + ".app")
-      val newRoot = newApplicationDirectory / (newApplicationDirectoryName + ".app")
-
-      // Create the new top level directory structure
-      FileActions.createDirectories(newRoot)
-      FileActions.copyDirectory((macRoot / "Contents").toPath,
-        (newRoot / "Contents").toPath,
-        p => !p.toString.contains("runtime"))
-
-      FileActions.moveFile(
-        newRoot / "Contents" / "MacOS" / stubApplicationName,
-        newRoot / "Contents" / "MacOS" / newApplicationName)
-      FileActions.moveFile(
-        newRoot / "Contents" / "app" / (stubApplicationName + ".cfg"),
-        newRoot / "Contents" / "app" / (newApplicationName + ".cfg"))
-  }
-
-  def copyWinStubApplications(
-    stubBuildDirectory:      File,
-    stubApplicationName:     String,
-    newApplicationDirectory: File,
-    subApplicationNames:     Seq[String]): Unit = {
-      val winRoot = stubBuildDirectory / stubApplicationName
-
-      // Create the new top level directory structure
-      FileActions.createDirectories(newApplicationDirectory)
-      FileActions.copyDirectory(winRoot, newApplicationDirectory)
-
-      // Copy in each sub application executable and config file
-      subApplicationNames.foreach { appName =>
-        FileActions.copyFile(winRoot / (stubApplicationName + ".exe"), newApplicationDirectory / (appName + ".exe"))
-        FileActions.copyFile(winRoot / (stubApplicationName + ".ico"), newApplicationDirectory / (appName + ".ico"))
-        FileActions.copyFile(winRoot / "app" / (stubApplicationName + ".cfg"), newApplicationDirectory / "app" / (appName + ".cfg"))
-      }
-
-      // Remove unneeded files
-      IO.delete(newApplicationDirectory / (stubApplicationName + ".exe"))
-      IO.delete(newApplicationDirectory / (stubApplicationName + ".ico"))
-      IO.delete(newApplicationDirectory / "app" / (stubApplicationName + ".cfg"))
-  }
-
-  def copyLinuxStubApplications(
-    stubBuildDirectory:      File,
-    stubApplicationName:     String,
-    newApplicationDirectory: File,
-    subApplicationNames:     Seq[String]): Unit = {
-      val permissions = {
-        import PosixFilePermission._
-        import scala.collection.JavaConverters._
-        Set(OWNER_READ, OWNER_WRITE, OWNER_EXECUTE, GROUP_READ, OTHERS_READ).asJava
-      }
-
-      // Create the new top level directory structure
-      FileActions.createDirectories(newApplicationDirectory / "bin")
-
-      // Prepare and copy files from the stub directory
-      val linuxRoot = stubBuildDirectory / stubApplicationName
-      val libapplauncherSO  = linuxRoot / "lib" / "libapplauncher.so"
-      Files.setPosixFilePermissions(libapplauncherSO.toPath, permissions)
-      FileActions.copyDirectory(linuxRoot / "lib" , newApplicationDirectory / "lib" )
-
-      // Copy in each sub application executable and config file
-      subApplicationNames.foreach { appName =>
-        val normalizedAppName = appName.replaceAllLiterally(" ", "")
-        FileActions.copyFile(linuxRoot / "bin" / stubApplicationName,
-          newApplicationDirectory / "bin" / normalizedAppName)
-        FileActions.copyFile(linuxRoot / "lib" / "app" / (stubApplicationName + ".cfg"),
-          newApplicationDirectory / "lib" / "app" / (normalizedAppName + ".cfg"))
-      }
-
-      // Remove unneeded files
-      IO.delete(newApplicationDirectory / "lib" / (stubApplicationName + ".png"))
-      IO.delete(newApplicationDirectory / "lib" / "app" / (stubApplicationName + ".cfg"))
-  }
-
   def setupAppImageInput(log: Logger, version: String, buildJDK: BuildJDK, buildDir: File, netLogoJar: File, dependencies: Seq[File]) = {
     val inputDir = buildDir / s"input-${buildJDK.version}-${buildJDK.arch}"
     log.info(s"Setting up jpackage input director: $inputDir")
@@ -288,41 +133,27 @@ object JavaPackager {
     inputDir
   }
 
-  val launchers = Set("NetLogo", "NetLogo 3D", "HubNet Client", "Behaviorsearch")
+  def generateAppImage(log: Logger, platform: String, mainLauncher: Launcher, configDir: File, buildDir: File, inputDir: File, destDir: File, extraJpackageArgs: Seq[String], extraLaunchers: Seq[Launcher]) = {
 
-  def generateAppImage(log: Logger, platform: String, version: String, configDir: File, buildDir: File, inputDir: File, destDir: File, extraJpackageArgs: Seq[String], launcherSettings: Seq[Launcher]) = {
-    FileActions.remove(destDir)
-
-    launcherSettings.foreach( (settings) => {
-      val inFile  = configDir / s"${settings.mustachePrefix}.properties.mustache"
+    val extraLauncherArgs = extraLaunchers.flatMap( (settings) => {
+      val inFile  = configDir / s"extra-launcher.properties.mustache"
       val outFile = buildDir / s"${settings.mustachePrefix}.properties"
       Mustache(inFile, outFile, settings.toVariables)
+      Seq("--add-launcher", s"${settings.name}=${outFile.getAbsolutePath}")
     })
-
-    val netLogo3dPropsPath      = (buildDir / "netlogo-3d-launcher.properties").getAbsolutePath
-    val hubNetPropsPath         = (buildDir / "hubnet-client-launcher.properties").getAbsolutePath
-    val behaviorsearchPropsPath = (buildDir / "behaviorsearch-launcher.properties").getAbsolutePath
 
     val args = Seq[String](
       "jpackage"
     , "--verbose"
     , "--resource-dir", buildDir.getAbsolutePath
-    , "--name",         s"NetLogo"
-    , "--description",  s"NetLogo $version"
+    , "--name",         mainLauncher.name
+    , "--description",  mainLauncher.description
     , "--type",         "app-image"
-    , "--main-jar",     s"netlogo-$version.jar"
-    , "--main-class",   "org.nlogo.app.App"
+    , "--main-jar",     mainLauncher.mainJar
+    , "--main-class",   mainLauncher.mainClass
     , "--input",        inputDir.getAbsolutePath
     , "--dest",         destDir.getAbsolutePath
-    , "--java-options", "-Xmx1024m"
-    , "--java-options", "-Dfile.encoding=UTF-8"
-    , "--java-options", "--add-exports=java.base/java.lang=ALL-UNNAMED"
-    , "--java-options", "--add-exports=java.desktop/sun.awt=ALL-UNNAMED"
-    , "--java-options", "--add-exports=java.desktop/sun.java2d=ALL-UNNAMED"
-    , "--add-launcher", s"""NetLogo 3D=$netLogo3dPropsPath"""
-    , "--add-launcher", s"""HubNet Client=$hubNetPropsPath"""
-    , "--add-launcher", s"""Behaviorsearch=$behaviorsearchPropsPath"""
-    ) ++ extraJpackageArgs
+    ) ++ extraLauncherArgs ++ extraJpackageArgs
 
     log.info(s"running: ${args.mkString(" ")}")
     val returnValue = Process(args, buildDir).!
